# ObjectDetection

./: .gitignore  CMakeLists.txt  README.md  config.example.yaml  config.yaml  config_example.yaml  export.py  main.cpp  yoloe_classes.txt
.github/workflows/: ci.yml
include/: Detection.hpp  Detection_ORT.hpp  Detection_OpenCV.hpp  Detection_OpenVINO.hpp  DetectorFactory.hpp  FrameCrop.hpp  Framework.hpp  Source.hpp  Timer.hpp  Tracker.hpp  VideoHandler.hpp  YoloPostprocess.hpp  config_loader.hpp
src/: Detection.cpp  Detection_ORT.cpp  Detection_OpenCV.cpp  DetectorFactory.cpp  Timer.cpp  Tracker.cpp  VideoHandler.cpp  main.cpp
src/macos/: Detection_OpenVINO.cpp
src/openvino/: Detection_OpenVINO.cpp
tests/: test_framework.cpp  test_inference.cpp
